z-index bug fixed -- .huffpostlabs-quiz z-index:0

--- a/app/static/widget/widget.css
+++ b/app/static/widget/widget.css
@@ -39,10 +39,11 @@
 	height: 425px;
   	display: block;
   	position: relative;
-  	z-index: 1; /* to go around the background image of -1 */
+  	z-index: 0; /* to go around the background image of -1 */
 	background-color: black;
 
-}.huffpostlabs-quiz::after{
+}
+.huffpostlabs-quiz::after{
 	content: "";
 	opacity: 0.5;
 	background-repeat: no-repeat;
